# picoSCAD

./: CMakeLists.txt
libpicoscad/: CMakeLists.txt
libpicoscad/include/picoscad/: porting.h
libpicoscad/include/picoscad/cg/: ghclipping.h  vertex.h
libpicoscad/include/picoscad/data/: array.h
libpicoscad/include/picoscad/math/: 4d.h  4f.h  mat4d.h  mat4f.h  math.h
libpicoscad/include/picoscad/math/scalar/: 4d.h  4f.h
libpicoscad/include/picoscad/math/simd/: 4d.h  4f.h
libpicoscad/src/: picoscad.c
libpicoscad/src/cg/: ghclipping.c  vertex.c
libpicoscad/src/data/: array.c
picoscad/: CMakeLists.txt
picoscad/src/: picoscad.c
